--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,52 @@
 plugins {
-  id 'org.springframework.boot' version '2.6.4'
-  id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'java'
+    id 'org.springframework.boot' version '2.6.4'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'java'
 }
 
 group = 'com.thekliar'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '17'
+targetCompatibility = '17'
 
 configurations {
-  compileOnly {
-    extendsFrom annotationProcessor
-  }
+    querydslapt
+
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
-  mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-  implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
-  implementation 'org.springframework.boot:spring-boot-starter-webflux'
-  implementation 'org.apache.kafka:kafka-streams'
-  compileOnly 'org.projectlombok:lombok'
-  annotationProcessor 'org.projectlombok:lombok'
-  testImplementation 'org.springframework.boot:spring-boot-starter-test'
-  testImplementation 'io.projectreactor:reactor-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.apache.kafka:kafka-streams'
+
+    implementation 'com.querydsl:querydsl-mongodb'
+    implementation 'com.querydsl:querydsl-apt'
+
+    compileOnly 'org.projectlombok:lombok'
+
+    annotationProcessor 'org.projectlombok:lombok'
+
+    annotationProcessor(
+//            'org.springframework.data.mongodb.repository.support.MongoAnnotationProcessor',
+//            'org.springframework.data.mongodb.repository.support.MongoAnnotationProcessor',
+            'org.springframework.data:spring-data-mongodb',
+            'com.querydsl:querydsl-apt:5.0.0:general',
+//            'org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final',
+//            "javax.annotation:javax.annotation-api:1.3.2",
+            )
+
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'io.projectreactor:reactor-test'
 }
 
 tasks.named('test') {
-  useJUnitPlatform()
+    useJUnitPlatform()
 }
