--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      host: localhost
+      host: desdora
       port: 27017
       username: citizix
       password: S3cret
