--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+/src/main/generated/com/thekliar/reactive/model/
 
 ### NetBeans ###
 /nbproject/private/
