--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
   id 'org.springframework.boot' version '2.6.4'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'java'
+  id 'com.palantir.git-version' version '0.13.0'
 }
 
 group = 'com.thekliar'
-version = '0.0.1-SNAPSHOT'
+version = gitVersion()
 sourceCompatibility = '11'
 targetCompatibility = '11'
 
@@ -40,5 +41,9 @@ dependencies {
 }
 
 tasks.named('test') {
-  useJUnitPlatform()
+  useJUnitPlatform(){
+    excludeEngines('junit-vintage')
+  }
+  maxHeapSize = '1G'
+
 }
