--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ plugins {
 
 group = 'com.thekliar'
 version = gitVersion()
-sourceCompatibility = '11'
-targetCompatibility = '11'
+sourceCompatibility = JavaVersion.VERSION_11
+targetCompatibility = JavaVersion.VERSION_11
 
 configurations {
   compileOnly {
