build: add gradle performance improvements
Signed-off-by: Leonidas Spyropoulos <artafinde@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,16 @@
+# Performance
+org.gradle.caching=true
+org.gradle.parallel=true
+org.gradle.caching.debug=false
+org.gradle.configureondemand=false
+org.gradle.daemon.idletimeout=10800000
+org.gradle.console=auto
+org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# Kotlin (if required)
+kotlin.code.style=official
+kotlin.caching.enabled=true
+kotlin.incremental=true
+kotlin.incremental.js=true
+
 queryDslVersion = 5.0.0
