build: execute tests in parallel
Signed-off-by: Leonidas Spyropoulos <artafinde@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,12 @@ dependencies {
 }
 
 tasks.named('test') {
-  useJUnitPlatform(){
+  useJUnitPlatform {
     excludeEngines('junit-vintage')
   }
   maxHeapSize = '1G'
-
+  systemProperties['junit.jupiter.execution.parallel.enabled'] = true
+  systemProperties['junit.jupiter.execution.parallel.mode.default'] = 'concurrent'
+  systemProperties['junit.jupiter.execution.parallel.mode.classes.default'] = 'concurrent'
+  maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
 }
