build: tests in same IntegrationTest can't seem to be able to run in parallel
Signed-off-by: Leonidas Spyropoulos <artafinde@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ tasks.named('test') {
   }
   maxHeapSize = '1G'
   systemProperties['junit.jupiter.execution.parallel.enabled'] = true
-  systemProperties['junit.jupiter.execution.parallel.mode.default'] = 'concurrent'
+  systemProperties['junit.jupiter.execution.parallel.mode.default'] = 'same_thread'
   systemProperties['junit.jupiter.execution.parallel.mode.classes.default'] = 'concurrent'
   maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
 }
