build: trigger build on push and PRs
Signed-off-by: Leonidas Spyropoulos <artafinde@gmail.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,6 @@
-name: Run Gradle on PRs
-on: pull_request
+name: "Build on push and PRs"
+on: [push, pull_request]
+
 jobs:
   gradle:
     strategy:
