--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ jobs:
   gradle:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest] #, windows-latest] TODO: disable windows because it fails with socket error
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
