--- a/build.gradle
+++ b/build.gradle
@@ -80,7 +80,7 @@ checkstyle {
 
 sonarqube {
   properties {
-    property "sonar.projectKey", "kliarist_reactive"
+    property "sonar.projectKey", "reactive"
     property "sonar.organization", "reactive"
     property "sonar.host.url", "https://sonarcloud.io"
   }
