--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,30 +29,24 @@ jobs:
       - name: Build
         run: ./gradlew build
 
-  sonarqube:
-    name: Static Analysis
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
+        if: matrix.os == 'ubuntu-latest'
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
+
       - name: SonarCloud analyze
+        if: matrix.os == 'ubuntu-latest'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew sonarqube
 
-  jacoco:
-    name: Code Coverage
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
       - name: Add coverage to PR
         uses: madrapps/jacoco-report@v1.2
+        if: matrix.os == 'ubuntu-latest'
         with:
           paths: ${{ github.workspace }}/build/reports/jacoco/test/jacocoTestReport.xml
           token: ${{ secrets.GITHUB_TOKEN }}
