feature: add test containers
Signed-off-by: Leonidas Spyropoulos <artafinde@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,10 @@ dependencies {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
   testImplementation 'io.projectreactor:reactor-test'
+
+  testImplementation "org.testcontainers:testcontainers:${testContainersVersion}"
+  testImplementation "org.testcontainers:junit-jupiter:${testContainersVersion}"
+  testImplementation "org.testcontainers:mongodb:${testContainersVersion}"
 }
 
 tasks.withType(Test).configureEach {
