--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
   implementation ("com.querydsl:querydsl-mongodb") {
     exclude group: 'org.mongodb'
   }
+  implementation 'org.springframework.boot:spring-boot-starter-validation'
 
   compileOnly 'org.projectlombok:lombok'
 
