--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,6 @@ kotlin.caching.enabled=true
 kotlin.incremental=true
 kotlin.incremental.js=true
 
-queryDslVersion = 5.0.0
-testContainersVersion = 1.16.3
+queryDslVersion=5.0.0
+testContainersVersion=1.16.3
+mapstructVersion=1.4.2.Final
