feat: customize jackson default property inclusion to non null

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,5 @@ spring:
       password: S3cret
       database: reactive-boot
       authentication-database: admin
+  jackson:
+    default-property-inclusion: non_null
