--- a/build.gradle
+++ b/build.gradle
@@ -93,5 +93,6 @@ sonarqube {
     property "sonar.projectKey", "reactive"
     property "sonar.organization", "reactive"
     property "sonar.host.url", "https://sonarcloud.io"
+    property 'sonar.coverage.exclusions', 'src/main/java/com.thekliar/reactive/model/*,src/main/java/com/thekliar/reactive/dto/**'
   }
 }
