--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
   id 'checkstyle'
   id "org.sonarqube" version "3.3"
   id 'com.palantir.git-version' version '0.13.0'
+  id 'team.yi.semantic-gitlog' version '0.5.17'
 }
 
 group = 'com.thekliar'
@@ -103,4 +104,21 @@ sonarqube {
     property "sonar.organization", "reactive"
     property "sonar.host.url", "https://sonarcloud.io"
   }
+}
+
+changelog {
+  toRef = "main"
+  fileSets = [
+      {
+        template = file("${project.rootDir}/config/gitlog/CHANGELOG.mustache")
+        target = file("${project.rootDir}/CHANGELOG.md")
+      }
+  ]
+  outputs.upToDateWhen { false }
+}
+
+derive {
+  toRef = "main"
+  derivedVersionMark = "NEXT_VERSION:=="
+  outputs.upToDateWhen { false }
 }
