--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,4 @@ testContainersVersion=1.16.3
 mapstructVersion=1.4.2.Final
 jetbrainsAnnotationsVersion=20.1.0
 springdocOpenApiVersion=1.6.6
+springCloudVersion=2021.0.1
