--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ queryDslVersion=5.0.0
 testContainersVersion=1.16.3
 mapstructVersion=1.4.2.Final
 jetbrainsAnnotationsVersion=20.1.0
+springdocOpenApiVersion=1.6.6
